--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,7 +97,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "site/front";
 @import "site/content";
 @import "site/contact";
-@import "site/parallax";
+@import "site/episodes";
 @import "site/search";
 @import "site/subscribe";
 @import "site/site";
