Pre Pure CSS Search Toggle
Functioning JS search toggle, before attempting to replicate using only
CSS checkbox and labelling.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -99,6 +99,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "site/contact";
 @import "site/episodes";
 @import "site/search";
+@import "site/sharing";
 @import "site/subscribe";
 @import "site/site";
 
