--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -21,8 +21,8 @@ $color__border-abbr: #666;
 
 $color__tle-red: #772c41;
 $color__tle-blue: #429aa9;
-$color__tle-dark-grey: #bcbec0;
-$color__tle-light-grey: #77797b;
+$color__tle-dark-grey: #77797b;
+$color__tle-light-grey: #bcbec0;
 $color__tle-border: #939598;
 $color__tle-menu: #f6f6f6;
 
