--- a/sass/site/_search.scss
+++ b/sass/site/_search.scss
@@ -5,6 +5,7 @@
     margin-right: -1em;
     text-align: center;
     cursor: pointer;
+    color: $color__tle-dark-grey;
 }
 
 .search-toggle:hover,
