--- a/sass/elements/_lists.scss
+++ b/sass/elements/_lists.scss
@@ -23,3 +23,22 @@ dt {
 dd {
 	margin: 0 1.5em 1.5em;
 }
+
+div.entry-content ul {
+	list-style: none;
+	display: inline-block;
+}
+
+div.entry-content li a{
+	display: inline-block;
+	padding: .5em 0;
+}
+
+div.entry-content ul li a{
+	font-family: 'Rokkitt', serif;
+	color: $color__tle-red;
+	text-transform: uppercase;
+	border: 2px solid $color__tle-border;
+	padding: 1em;
+	margin: 1em 0;
+}
