--- a/sass/site/_content.scss
+++ b/sass/site/_content.scss
@@ -1,8 +1,61 @@
 .site {
-	margin-top: $tle_menu_height;
+	margin: $tle_menu_height auto 0 0;
 }
 
 .site-main {
 	width: 90%;
 	margin: auto;
+	max-width: 2400px;
+}
+
+.site-content {
+// THIS NEEDS A BETTER STRAT	margin-top: 72px;
+}
+
+.site-footer {
+	background: $color__tle-menu;
+	color: $color__tle-light-grey;
+	text-align: center;
+	text-transform: uppercase;
+	min-height: $tle_menu_height;
+}
+
+hr {
+	background-color: #429aa9;
+	border: 0;
+	height: 2px;
+	margin-bottom: -.7em;
+	margin-top: 1em 
+}
+
+@-webkit-keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slideInLeft {
+  -webkit-animation-name: slideInLeft;
+  animation-name: slideInLeft;
+  font-size: 40em;
 }
