--- a/sass/site/_episodes.scss
+++ b/sass/site/_episodes.scss
@@ -25,62 +25,111 @@
 
 .player-blurb {
 	border-top: 2px solid $color__tle-border;
+	padding: 1em;
 	}
 
+.author-about {
+	margin: auto;
+	text-align: center;
+	max-width: 1024px;
+}
 
 .episodes {
 	white-space: nowrap;
 	overflow-x: scroll;
 	overflow-y: hidden;
-	//width: 100%;
-	//height: 300px;
 	webkit-overflow-scrolling: touch;
 	scroll-snap-type: mandatory;
-	scroll-snap-points-x: snapInterval (0px, 200px);
+	scroll-snap-points-x: snapInterval (0px, 100px);
 }
 
 .episode-post {
 	display: inline-block;
-	border: 2px solid;
+	border: 2px solid $color__tle-border;
 	-webkit-column-break-inside: avoid; /* Chrome, Safari */
     page-break-inside: avoid;           /* Theoretically FF 20+ */
     break-inside: avoid-column;         /* IE 11 */
-    width: 200px;
+    width: 90%;
+    max-width: 300px;
     white-space:normal;
+    margin:0 .5em;
 }
 
 .episode-number,
 .episode-title,
 .episode-footer,
-.player-episode {
+.player-episode,
+.author-bio,
+author-info {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 }
 
-.episode-number {
+.episode-number  {
 	border-top: 2px solid $color__tle-border;
 	border-bottom: 2px solid $color__tle-border;
 	font-family: 'Rokkitt', serif;
-	color: $color__tle-red;
 	line-height: 2.5;
+	width: 90%;
+	margin: auto;
+	text-transform: uppercase;
 }
 
-.episode-title {
-	height: 6.65em;
+.episode-number,
+.episode-number a{
+	color: $color__tle-red;
+}
+
+.episode-title,
+.author-title
+ {
 	text-transform: lowercase;
 	line-height: 1;
 	margin: 0 auto;
 	padding: 1.125em;
 }
 
-.episode-excerpt {
+.author-social ul {
+	margin: auto;
+}
+
+.episode-title {
+	height: 6.65em;
+}
+
+.episode-excerpt,
+.author-excerpt {
 	height: 12.5em;
 	overflow: scroll;
 	padding: 0 2.25em;
 	font-family: 'PT Sans Narrow', sans-serif;
 }
 
+.author-excerpt {
+	height: 22.5em;
+}
+
 .episode-footer {
 	padding: 1.5em;
+}
+
+/*  GRID OF TWO  */
+.span_2_of_2 {
+	width: 100%;
+}
+.span_1_of_2 {
+	width: 47.5%;
+}
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+	.col { 
+		margin: 1% 0 1% 0%;
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.span_2_of_2, .span_1_of_2 { width: 100%; }
 }
