--- a/sass/site/_search.scss
+++ b/sass/site/_search.scss
@@ -13,6 +13,21 @@
     color: black;
 }
 
+#search:not(:target) {
+   opacity: 0;
+   visibility: hidden;
+   transition: opacity 1s, visibility 1s;
+}
+#search:target {
+	opacity: 1;
+    visibility: visible;
+    transition: opacity 1s, visibility 1s;}
+
+a.shut {
+	float: right;
+	padding: 0 .5em;
+}
+
 .search-toggle .screen-reader-text {
     top: 0;
     right: 0;
@@ -20,25 +35,26 @@
 .search-box-wrapper {
     z-index: 2;
     width: 100%;
-    transition: all 500ms ease-in-out;
 }
 .search-box {
 	margin-top: $tle_menu_height;
     padding: 2em;
     background: $color__tle-menu;
+    outline: 0;
    	}
 
 .search-box .search-field {
     max-width: 362px;
     float: right;
-    padding: 1rem 2rem 1rem 4rem;
+    padding: 1rem 2rem .5rem 4rem;
     background-color: #fff;
     border: 0;
+    height: 1.25em;
 }
 
-.hide {
-	display: none;
-}
+//.hide {
+//	display: none;
+//} */
 
 .error404 .search-submit,
 .search .search-submit,
