--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -34,5 +34,7 @@ img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
 }
-
+div.jetpack-image-container{
+	padding: 2em;
+}
 @import "tables";
