--- a/sass/site/_about.scss
+++ b/sass/site/_about.scss
@@ -1,17 +1,59 @@
 .about-image {
-	max-width: 46.9%;
+	width: 50%;
 	float: left;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.about-copy {
-	float: right;
-	max-width: 46.9%;
+.about-image img{
+	max-width: 20%;
+}
+
+.author-about {
+	margin: auto;
+	text-align: center;
+}
+
+div#about.section.group{
+	max-width: 1024px;
+	margin: -1em auto;
+}
+
+#auth article header {
+	text-align: center;
+}
+
+.about-title {
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 2em;
+	background: $color__tle-menu;
+	margin: .5em -5.5% 0 -5.5%;
+	padding-top: .5em;
+	overflow: hidden;
+}
+
+#auth article {
+	//@include parallax(.1);
+	max-width: 50%;
 	padding: 0 4em;
-}
-.author-about .section group .col{
-	margin: 1% 0 1% 5%;
+	float: right;
+	margin: -2em 0 0 0;
+	//display: flex;
+    //justify-content: center;
+   // align-items: center;
 }
 
-author-excerpt a {
+#aboot div.entry-content p {
+	max-width: 100%;
+}
+
+.author-excerpt {
+	padding: 1em 2.25em !important;
+}
+
+.author-excerpt a {
 	text-decoration: underline;
 }
