--- a/sass/site/_contact.scss
+++ b/sass/site/_contact.scss
@@ -36,6 +36,8 @@ body.modalDialog {
 	display: flex;
     justify-content: space-between;
     background: #fff;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.2);
+    transform-style: flat;
 }
 
 .modalDialog > .modal-title {
@@ -61,6 +63,10 @@ body.modalDialog {
 
 #opencontact.blurb {
 	margin-left: 4em;
+}
+
+div#mce-success-response.response {
+	padding: 1em !important;
 }
 
 .modalDialog input[type="text"],
