--- a/sass/site/_content.scss
+++ b/sass/site/_content.scss
@@ -1,15 +1,20 @@
 .site {
-	margin: $tle_menu_height auto 0 0;
+	margin: 100px auto 0 0;
 }
 
 .site-main {
 	width: 90%;
 	margin: auto;
 	max-width: 2400px;
+	transform-style: flat;
 }
 
 .site-content {
-// THIS NEEDS A BETTER STRAT	margin-top: 72px;
+	margin-top: 2em;
+}
+
+div.entry-content p{
+	max-width: 85%;
 }
 
 .site-footer {
@@ -57,5 +62,10 @@ hr {
 .slideInLeft {
   -webkit-animation-name: slideInLeft;
   animation-name: slideInLeft;
-  font-size: 40em;
+}
+
+#greyjoy {
+	background: $color__tle-menu;
+	margin: 0 -5.5%;
+	padding: 2em 4em; 
 }
